# COMP2323-Logbook

./: .gitignore  CMakeLists.txt  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
sections/: cheatsheet.tex  week01.tex
src/common/: bit_utils.h
src/week-01/: example.c
templates/: template.tex
